# sgr

./: .bumpversion.cfg  .coveragerc  .earthignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .sgconfig  .travis.yml  CHANGELOG.md  Dockerfile  Earthfile  LICENSE.md  README.md  do_stuff.sh  environment.yml  install.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  splitgraph.spec  splitgraph_darwin.spec  todo.md  wait-for-test-architecture.sh
.ci/: before_deploy.sh  before_install.sh  before_script.sh  build_artifacts.sh  build_docs.sh  build_wheel.sh  down_architecture.sh  install.sh  install_prereqs.sh  prepare_doc_bundle.sh  push_engine.sh  rebuild_asciicasts.sh  up_architecture.sh
.github/: dependabot.yml
.github/workflows/: build_and_test_and_release.yml
benchmarking/: commit_chain_test.py  large_dataset_test.py  lq_fdw_profiling.py  multiple_repo_object_cache_test.py  object_cache_test.py
docs/: Makefile  README.md  commands.rst  conf.py  creating_images.rst  generate_commandline_reference.py  generate_markdown_commandline_reference.py  generate_reference.py  images.rst  index.rst  internals.rst  introduction.rst  quickstart.rst  sgfile.rst  splitfile.rst
docs/api/: modules.rst  splitgraph.cloud.project.rst  splitgraph.cloud.rst  splitgraph.commandline.rst  splitgraph.commands.rst  splitgraph.config.rst  splitgraph.core.indexing.rst  splitgraph.core.rst  splitgraph.core.sql.rst  splitgraph.engine.postgres.rst  splitgraph.engine.rst  splitgraph.hooks.data_source.rst  splitgraph.hooks.rst  splitgraph.ingestion.airbyte.rst  splitgraph.ingestion.athena.rst  splitgraph.ingestion.bigquery.rst  splitgraph.ingestion.csv.rst  splitgraph.ingestion.dbt.rst  splitgraph.ingestion.rst  splitgraph.ingestion.singer.commandline.rst  splitgraph.ingestion.singer.rst  splitgraph.ingestion.snowflake.rst  splitgraph.ingestion.socrata.rst  splitgraph.meta_handler.rst  splitgraph.objects.rst  splitgraph.resources.icons.rst  splitgraph.resources.rst  splitgraph.resources.splitgraph_meta.rst  splitgraph.resources.static.rst  splitgraph.rst  splitgraph.sgfile.rst  splitgraph.splitfile.generation.rst  splitgraph.splitfile.rst  splitgraph.utils.rst
docs/commands/: checkout.rst  commands.rst  commit.rst  image_information.rst  image_management_creation.rst  importing.rst  miscellaneous.rst  mounting.rst  provenance.rst  push_pull.rst  sharing_images.rst  splitfile_execution.rst  status_diff.rst
engine/: .gitmodules  Dockerfile  Dockerfile.debug  Dockerfile.pg_debug  Makefile  README.md
engine/build_scripts/: build_python.sh  build_splitgraph.sh
engine/init_scripts/: 000_create_extensions.sql  001_install_splitgraph_audit_triggers.sql
examples/: README.md  asciinema-player.css  example_to_md.py  fetch_repositories_from_splitgraph.py  rebuild_asciinema.py  rerun_notebooks.sh  run_example.py  update_example_versions.sh
examples/benchmarking/: README.md  benchmarking.ipynb  benchmarking_real_data.ipynb  docker-compose.yml  pyproject.toml
examples/bloom-filter/: README.md  example.yaml
examples/clickhouse/: README.md  docker-compose.yml  setup_datasets.sh
examples/cross-db-analytics/: README.md  docker-compose.yml
examples/custom_fdw/: README.md  docker-compose.yml
examples/dbt/: .gitignore  README.md  example.yaml
examples/dbt_adapter/: README.md  setup.py
examples/dbt_two_databases/: README.md  dbt_project.yml  docker-compose.yml
examples/get-started/: README.md  example.yaml
examples/import-from-csv/: README.md  example.yaml  rdu-weather-history.csv
examples/import-from-mongo/: .sgconfig  README.md  docker-compose.yml  example.yaml  mongo_import.splitfile
examples/iris/: .sgconfig  README.md  docker-compose.yml  iris.ipynb  pyproject.toml
examples/pg-replication/: .sgconfig  README.md  docker-compose.yml  example.yaml
examples/pgadmin/: .sgconfig  README.md  docker-compose.yml  setup.sh
examples/postgis/: README.md  cleanup.sh  docker-compose.yml  pyproject.toml  rerun.sh  vote_map.ipynb  vote_map.splitfile
examples/postgrest/: README.md  docker-compose.yml  example.yaml  postgrest.conf
examples/push-to-object-storage/: .sgconfig  README.md  docker-compose.yml  example.yaml
examples/push-to-other-engine/: .sgconfig  README.md  docker-compose.yml  example.yaml
examples/query_api/: README.md  example.yaml
examples/sample_splitfiles/: README.md  county_votes.splitfile  london_votes.splitfile  qoz_vote_fraction_single_command.splitfile  us_flights_2009.splitfile
examples/splitfiles/: README.md  example.yaml  rdu-weather-summary.splitfile
examples/splitgraph-cloud/: README.md  dataset-metadata.yml  dataset-readme.md  docker-compose.yml  example.yaml  request_1.json  request_2.json
examples/template/: .sgconfig  README.md  docker-compose.yml  example.yaml
examples/test/: conftest.py  test_examples.py
examples/us-election/: README.md  analyze.py  docker-compose.yml  example.yaml  pyproject.toml  qoz_vote_fraction.splitfile  qoz_vote_fraction_single_command.splitfile
splitgraph/: .git-blame-ignore-revs  .sgconfig  BUILD  __init__.py  __version__.py  commandline.py  commands.py  connection.py  console.py  constants.py  drawing.py  exceptions.py  meta_handler.py  pg_audit.py  pg_replication.py  pg_utils.py  registry_meta_handler.py  sgfile.py
splitgraph/_data/: common.py  images.py  misc.py  objects.py  provenance.py  registry.py
splitgraph/cloud/: __init__.py  models.py  queries.py  tunnel_client.py
splitgraph/commandline/: __init__.py  _common.py  cloud.py  common.py  console.py  engine.py  example.py  image_creation.py  image_info.py  ingestion.py  misc.py  mount.py  push_pull.py  splitfile.py
splitgraph/commands/: __init__.py  _common.py  _drawing.py  _pg_audit.py  checkout.py  commit.py  diff.py  external_object_handlers.py  import_table.py  importing.py  info.py  misc.py  mount_handlers.py  mounting.py  object_loading.py  provenance.py  publish.py  push_pull.py  repository.py  tagging.py
splitgraph/config/: __init__.py  argument_config.py  config.py  config_file_config.py  default_config.py  (+6 more)
test/: clean_test.sh
(+457 files in other folders)
