# These are the requirements to run the Postgis Jupyter notebook

[tool.poetry]
name = "splitgraph-postgis"
version = "0.0.0"
description = "Splitgraph PostGIS example"
license = "Apache 2.0"
authors = ["Splitgraph Limited"]
readme = "README.md"
homepage = "https://www.splitgraph.com"
repository = "https://github.com/splitgraph/sgr"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
splitgraph = { path = "../.." }
pandas = ">=0.24"
jupyter = ">=1.0"
# For plotting
geopandas = "^0.7.0"
descartes = "^1.1.0"
shapely = "^1.7.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
