# These are the requirements to run the analyze.py file.

[tool.poetry]
name = "splitgraph-us-election"
version = "0.0.0"
description = "Splitgraph US Election dataset example"
license = "Apache 2.0"
authors = ["Splitgraph Limited"]
readme = "README.md"
homepage = "https://www.splitgraph.com"
repository = "https://github.com/splitgraph/splitgraph"

[tool.poetry.dependencies]
python = ">=3.6"
splitgraph = { path = "../.." }
pandas = ">=0.24"
scipy = ">=1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
